--- a/demo-app/src/index.css
+++ b/demo-app/src/index.css
@@ -310,7 +310,58 @@ margin-left: -1rem;
   background-color: #0f5c39;
   color: white;
 }
+/********************DETALLES PRODUCTO**********/
+.detalles{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 13rem 1rem 0 1rem;
+  box-sizing: border-box;
+}
+.detalles h2{
+  font-size: 3rem;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  font-family: Helvetica, sans-serif;
+}
+.detalles .price{
+  font-size: 3rem;
+  width: 100%;
+  color: #08a05c;
+}
+.detalles button{
+  max-width: 300px;
+  margin: 1rem 0 0 0;
+  padding: 1rem 1rem;
+  border: none;
+  outline: 0;
+  background: #3033d3;
+  font-size: 1.6rem;
+  color: white;
+  font-weight: 600;
+  border-radius: 8px ;
+  cursor: pointer;
+}
+.detalles .grid{
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 2rem 1rem;
+max-width: 350px;
+}
+.detalles .grid > .nuevo, .size{
+padding: 1rem 2rem;
+border-radius: 8px;
+font-size: 2rem;
+}
+.detalles img{
+  min-height: 300px;
+  object-fit: contain;
+  margin-top: -7rem;
+  z-index: -1;
+}
 
+/**********MEDIA******************/
 @media only screen and(max-width:1000px){
   .carrito_item{
     width: 92%;
